--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,21 @@
 name: Github Action demo
 
-on: [push]
+on: 
+  push:
+    branches: 
+      - main 
+  pull_request: 
+    types: 
+      - opened
+    branches: 
+      - 'feature/*'
+      - '*feature'
+  
 
 jobs:
   build-job:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello World"
+      - run: echo "Hello World 2"
+      - run: echo "Hello World 3"
