--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,9 @@ on:
   pull_request: 
     types: 
       - opened
-    branches: 
-      - 'feature/*'
-      - '*feature'
+    # branches: 
+    #   - 'feature/*'
+    #   - '*feature'
   
 
 jobs:
