--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,8 @@ on:
   pull_request: 
     types: 
       - opened
-    # branches: 
-    #   - 'feature/*'
-    #   - '*feature'
+    branches: 
+      - 'main'
   
 
 jobs:
