--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,4 @@ jobs:
   deploy-job:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "deploy job"
+      - run: echo "deploy job to production server"
