--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,14 @@ jobs:
   build-job:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "build job"
+      - run: echo "Repo ${{ github.actor }} ${{ github.ref }} "
   test-job:
     runs-on: ubuntu-latest
     needs: build-job
     steps:
-      - run: echo "test job"
+      - run: echo "test job Repo is ${{ github.repository }}"
   deploy-job:
     runs-on: ubuntu-latest
     needs: test-job
     steps:
-      - run: echo "deploy job to production server"
+      - run: echo "deploy job to production server ${{ job.status }}"
