--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,18 +7,21 @@ on:
   pull_request: 
     branches: 
       - 'main'
+env:
+  MY_HOST: '127.0.0.1'
   
 
 jobs:
   build-job:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "my host is $MY_HOST"
       - run: echo "Repo ${{ github.actor }} ${{ github.ref }} "
   test-job:
     runs-on: ubuntu-latest
     needs: build-job
     steps:
-      - run: echo "test job Repo is ${{ github.repository }}"
+      - run: echo "test job Repo is ${{ github.repository }} my host ${{ env.MY_HOST }}"
   deploy-job:
     runs-on: ubuntu-latest
     needs: test-job
