--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,14 +9,19 @@ on:
       - 'main'
 env:
   MY_HOST: '127.0.0.1'
-  
+  COMPANY_NAME: 'CCT'
 
 jobs:
   build-job:
     runs-on: ubuntu-latest
+    env:
+      FULLNAME: 'John Doe'
     steps:
-      - run: echo "my host is $MY_HOST"
-      - run: echo "Repo ${{ github.actor }} ${{ github.ref }} "
+      - run: echo "my host is $MY_HOST and $FULLNAME"
+      - run: echo "Repo ${{ github.actor }} ${{ github.ref }} $FULLNAME"
+      - run: echo "vars Company name > ${{ vars.COMPANY_NAME }} "
+      - run: echo "env Company name > ${{ env.COMPANY_NAME }}"
+      - run: echo "Company name > $COMPANY_NAME"
   test-job:
     runs-on: ubuntu-latest
     needs: build-job
