--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       - run: echo "vars Company name > ${{ vars.COMPANY_NAME }} "
       - run: echo "env Company name > ${{ env.COMPANY_NAME }}"
       - run: echo "Company name > $COMPANY_NAME"
+      - run: echo "secret company ${{ secrets.MYSQL_PASSWORD }}"
   test-job:
     runs-on: ubuntu-latest
     needs: build-job
